--- a/_includes/blocks/popup/calendar/ms-calendar-header.html
+++ b/_includes/blocks/popup/calendar/ms-calendar-header.html
@@ -1,5 +1,5 @@
 <ul class="itemBoxTable__bodyRow">
-  <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
+  <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--flex1">
     <div class="itemBoxTable__bodyCellInner">
       <div class="pmx-selector pmx-selector--readonly">
         <div class="pmx-selector__item">
@@ -10,7 +10,7 @@
       </div>
     </div>
   </li>
-  <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
+  <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--flex1">
     <div class="itemBoxTable__bodyCellInner">
       <div class="pmx-selector">
         <div class="pmx-selector__item pmx-selector__item--selected">
@@ -21,7 +21,7 @@
       </div>
     </div>
   </li>
-  <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--align-right" style="flex-grow: 1;" data-flex="1">
+  <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--flex1 itemBoxTable__bodyCell--align-right">
     <div class="itemBoxTable__bodyCellInner">
       <div class="pmx-selector pmx-selector--readonly">
         <div class="pmx-selector__item">
