--- a/_includes/blocks/popup/calendar/ms-calendar-row.html
+++ b/_includes/blocks/popup/calendar/ms-calendar-row.html
@@ -24,7 +24,7 @@
     {% assign dayClass = {splittedDayArray.last} | prepend: "pmx-selector_date--" %}
   {% endif %}
 
-  <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
+  <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--flex1">
     <div class="itemBoxTable__bodyCellInner">
       <div class="pmx-selector pmx-selector--readonly {{ dayClass }}">
         <div class="pmx-selector__item">
