--- a/_includes/blocks/popup/ms-create-new.html
+++ b/_includes/blocks/popup/ms-create-new.html
@@ -1,5 +1,5 @@
 <ul class="itemBoxTable__bodyRow itemBoxTable__bodyRow--loadMore JS_createNewTag JS_filterableCell">
-  <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
+  <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--flex1">
     <div class="itemBoxTable__bodyCellInner JS_text">Create New</div>
   </li>
 </ul>
