--- a/_includes/blocks/popup/ms-incl-excl-filter-sublist.html
+++ b/_includes/blocks/popup/ms-incl-excl-filter-sublist.html
@@ -2,7 +2,7 @@
   <div class="itemBoxTable">
     <div class="itemBoxBody">
       <ul class="itemBoxTable__bodyRow">
-        <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
+        <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--flex1">
           <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--inclExcl" data-filter="Include">
             <div class="pmx-selector pmx-selector--readonly">
               <div class="pmx-selector__item">
@@ -15,7 +15,7 @@
         </li>
       </ul>
       <ul class="itemBoxTable__bodyRow">
-        <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
+        <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--flex1">
           <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--inclExcl" data-filter="Exclude">
             <div class="pmx-selector pmx-selector--readonly">
               <div class="pmx-selector__item">
