--- a/_includes/blocks/popup/ms-tags-colors-color-sublist.html
+++ b/_includes/blocks/popup/ms-tags-colors-color-sublist.html
@@ -3,7 +3,7 @@
     <div class="itemBoxBody">
       {% for item in site.data.color-sublist.items %}
         <ul class="itemBoxTable__bodyRow">
-          <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
+          <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--flex1">
             <div class="itemBoxTable__bodyCellInner JS_itemBoxTable__bodyCellInner--color">
               <div class="pmx-selector pmx-selector--readonly">
                 <div class="pmx-selector__item">
