--- a/sass/app.scss
+++ b/sass/app.scss
@@ -49,6 +49,11 @@ body.page-Tag-picker {
   background-color: #FFF;
   margin: 50px 25%;
 }
+body.page-Font {
+  position: relative;
+  background-color: #FFF;
+  margin: 50px 5%;
+}
 
 
 
