--- a/_includes/blocks/popup/ms-load-more.html
+++ b/_includes/blocks/popup/ms-load-more.html
@@ -1,5 +1,5 @@
 <ul class="itemBoxTable__bodyRow itemBoxTable__bodyRow--loadMore">
-  <li class="itemBoxTable__bodyCell" style="flex-grow: 1;" data-flex="1">
+  <li class="itemBoxTable__bodyCell itemBoxTable__bodyCell--flex1">
     <div class="itemBoxTable__bodyCellInner ">Load <span>10</span> more</div>
   </li>
 </ul>
